refactor: Editadas clases para mejorar procesos
- Incluida clase auxiliar del Objeto Shipment
- Reformulada la clase del WS
- Reformulada clase de Parseo
- Corregido error de clase Constants

--- a/hiberus-devs/force-app/main/default/classes/Constants.cls
+++ b/hiberus-devs/force-app/main/default/classes/Constants.cls
@@ -22,7 +22,7 @@ public without sharing class Constants
     static 
     {                
         List<trackShipmentsSetup__mdt> setupConstants = [SELECT Id, DeveloperName, Value__c
-                                                            FROM trackShipments__mdt];
+                                                            FROM trackShipmentsSetup__mdt];
 
         Map<String, String> setupConstantsByDevName = new Map<String, String>();
 
