--- a/hiberus-devs/force-app/main/default/classes/Constants.cls
+++ b/hiberus-devs/force-app/main/default/classes/Constants.cls
@@ -12,12 +12,11 @@ public without sharing class Constants
     //Mensajes de error del Servicio Web
     public static final String RESPONSE_ERROR_NO_BODY = 'You must include a body request';
     public static final String RESPONSE_ERROR_BAD_WAREHOUSE = 'The reported warehouse is not allowed or is incorrect';
-
-    //Formato fecha SALESFORCE
-    public static final String DATE_FORMAT_SALESFORCE = 'yyyy-MM-dd\'T\'HH:mm:ss\'Z\'';
+    public static final String RESPONSE_ERROR_INCORRECT_FIELD = 'An incorrect or unesaw field was detected';
 
     //Campos donde se almacena la informacion de control en Salesforce sobre la configuración del proceso
     public static final List<String> VALID_WAREHOUSES;
+    public static final List<String> EXPECTED_FIELDS;
 
     static 
     {                
@@ -35,6 +34,7 @@ public without sharing class Constants
         }
 
         VALID_WAREHOUSES = setupConstantsByDevName.get( 'VALID_WAREHOUSES' ).split('-', 0);
+        EXPECTED_FIELDS = setupConstantsByDevName.get( 'EXPECTED_FIELDS' ).split('!', 0);
     }
 
 }
